[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/hpbar/hpbar.png" type="Texture" id=1]
[ext_resource path="res://Images/hpbar/hpbarHealth.png" type="Texture" id=2]
[ext_resource path="res://Themes/BattleHPbar.tres" type="Theme" id=3]
[ext_resource path="res://Images/pokeball.png" type="Texture" id=4]
[ext_resource path="res://Scenes/HPBar.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float x_pos;

void vertex() {
	VERTEX.x += x_pos;
	VERTEX.y -= 28.0;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/x_pos = 25.0

[node name="PlayerHPBar" type="Panel"]
margin_left = 17.0
margin_right = 185.0
margin_bottom = 76.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 3 )
script = ExtResource( 5 )

[node name="PokeballContainer" type="HBoxContainer" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
margin_bottom = 32.0
alignment = 2

[node name="Pokeball" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 4.0
margin_right = 28.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Pokeball4" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 32.0
margin_right = 56.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Pokeball5" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 60.0
margin_right = 84.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Pokeball6" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 88.0
margin_right = 112.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Pokeball2" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 116.0
margin_right = 140.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Pokeball3" type="TextureRect" parent="PokeballContainer"]
use_parent_material = true
margin_left = 144.0
margin_right = 168.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="Controls" type="VBoxContainer" parent="."]
margin_right = 163.0
margin_bottom = 41.0
rect_min_size = Vector2( 128, 0 )
theme = ExtResource( 3 )

[node name="Titles" type="HBoxContainer" parent="Controls"]
margin_right = 173.0
margin_bottom = 28.0

[node name="PokemonName" type="Label" parent="Controls/Titles"]
margin_right = 128.0
margin_bottom = 28.0
rect_min_size = Vector2( 128, 0 )
theme = ExtResource( 3 )
text = "Pokemon"

[node name="PokemonLevel" type="Label" parent="Controls/Titles"]
margin_left = 132.0
margin_right = 173.0
margin_bottom = 28.0
theme = ExtResource( 3 )
text = "Lv. 1"

[node name="HPBar" type="TextureProgress" parent="Controls"]
margin_top = 32.0
margin_right = 173.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 16 )
step = 0.1
value = 89.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="XPBar" type="TextureProgress" parent="Controls"]
margin_top = 52.0
margin_right = 173.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 4 )
step = 0.1
value = 89.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 1, 0.235294, 0.486275, 1 )
nine_patch_stretch = true

[node name="HPText" type="Label" parent="Controls"]
margin_top = 60.0
margin_right = 173.0
margin_bottom = 88.0
theme = ExtResource( 3 )
text = "5/10"

[node name="anim" type="Tween" parent="."]
